# BedBotHardware

./: CMakeLists.txt  MAX30102.c  README.md  algorithm.c  algorithm.h  gpio.c  init.sh  piCC.c  piCCPull.c  tempSensor.c  tempSensor.py
